--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -65,7 +65,7 @@
         app:layout_constraintTop_toBottomOf="@+id/et_login_email" />
 
     <Button
-        android:id="@+id/button3"
+        android:id="@+id/login"
         android:layout_width="250dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="64dp"
